Provide ability to create contacts
